# elevenlabs-tts

./: .gitignore  prepare_release.sh  pyproject.toml
packaging/rpm/: elevenlabs-tts.spec
releases/elevenlabs-tts-1.0.0/: .gitignore  LICENSE  Makefile  README.md  prepare_release.sh  requirements.txt
releases/elevenlabs-tts-1.0.0/packaging/gnome/: com.elevenlabs.tts.metainfo.xml  elevenlabs-tts-settings.desktop  elevenlabs-tts.desktop
releases/elevenlabs-tts-1.0.0/src/: elevenlabs_tts_cli.py  elevenlabs_tts_settings.py
releases/elevenlabs-tts-1.0.0/src/lib/: database.py  gst.py  os.py  playback.py
src/lib/: DBUS.py  __init__.py  mpris.py
