[project]
name = "elevenlabs_tts"
version = "1.0.0"
description = "ElevenLabs TTS Desktop Application and CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "dasbus",
    "mutagen",
    "pygobject",
]
authors = [
    { name = "Sadig Akhund", email = "sadigaxund@gmail.com" }
]

[project.scripts]
elevenlabs-tts = "elevenlabs_tts_cli:main"
elevenlabs-tts-settings = "elevenlabs_tts_settings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lib"]

[tool.hatch.build.targets.wheel.force-include]
"src/elevenlabs_tts_cli.py" = "elevenlabs_tts_cli.py"
"src/elevenlabs_tts_settings.py" = "elevenlabs_tts_settings.py"
